# rules_python_black

./: CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: release.yml  workspace_snippet.sh
docs/: BUILD.bazel  rules.md
python_black/: BUILD.bazel  __main__.py  defs.bzl  repositories.bzl
