load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "__main__.py",
        "defs.bzl",
    ],
    visibility = [
        "//visibility:public",
    ],
)

label_flag(
    name = "black.cfg",
    build_setting_default = "//tools:black.cfg",
    visibility = ["//visibility:public"],
)

label_flag(
    name = "black.exe",
    build_setting_default = "//tools:black.bin",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_skylib//rules:write_file"],
)
