load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "__main__.py",
        "defs.bzl",
        "default_config",
    ],
    visibility = [
        "//visibility:public",
    ],
)

label_flag(
    name = "black.cfg",
    build_setting_default = "//python_black:default_config",
    visibility = ["//visibility:public"],
)

label_flag(
    name = "black.exe",
    # This is a garbage value because it's required.
    build_setting_default = "//python_black:__main__.py",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_skylib//rules:write_file"],
)
